objects/MBO_Partner_Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Modified__c</fullName>
        <description>To find the child of this partner group is modified after id's and respective values are calculated.</description>
        <label>Child Modified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Country_Group__c</fullName>
        <description>This will indicate the country information for the selected Geo Coverage.</description>
        <formula>Geography__r.GEO_Code__c</formula>
        <label>Country/Country Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Period__c</fullName>
        <description>This will provide the Enrollment period for the group. This can be either 6 months or 12 months.</description>
        <label>Enrollment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                    <default>true</default>
                    <label>6</label>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold the Geo Coverage for the required country or country Group selected for  the concerned group record.</description>
        <label>Geography</label>
        <referenceTo>MBO_GEO_Coverage__c</referenceTo>
        <relationshipLabel>MBO Partner Group</relationshipLabel>
        <relationshipName>Geography</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Level__c</fullName>
        <description>Level of the group, 1-Track Level 2-Partner Group Level</description>
        <label>Group Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>PARTNER</fullName>
                    <default>true</default>
                    <label>PARTNER</label>
                </value>
                <value>
                    <fullName>TRACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBO_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MBO Program</label>
        <referenceTo>MBO_Program__c</referenceTo>
        <relationshipName>MBO_Pgm_Pg</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Group_Type__c</fullName>
        <description>This will indicate the type of Group. The possible values are Country Group and Country.</description>
        <formula>TEXT(Geography__r.GEO_Type__c)</formula>
        <label>Partner Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <formula>MBO_Program__r.Track__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsedBy__c</fullName>
        <label>UsedBy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Count__c</fullName>
        <description>Its the number of times this Partner Group referred in the MBO Line Items. For P+ and Latam only one MBO Item can refer the PG.</description>
        <label>Used Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Enables to create custom group of Partners.</description>
    <label>MBO Partner Group</label>
    <nameField>
        <label>Partner Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MBO Partner Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MBO_Program__c</columns>
        <columns>Track__c</columns>
        <columns>Group_Level__c</columns>
        <columns>Country_Country_Group__c</columns>
        <columns>Geography__c</columns>
        <columns>Enrollment_Period__c</columns>
        <columns>Partner_Group_Type__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>